# dependent-type-event-semantics

./: .gitignore  README.md  pyproject.toml
.github/workflows/: verify.yml
docs/: ast_intermediate_representation.md  event_to_dependent_type_notes.md  web_pipeline_design.md
formalization/: DependentTypeEventSemantics.lean  DependentTypeEventSemantics.v  README.md
paper/: dependent_type_replacement_for_event_semantics_sci_manuscript.docx  dependent_type_replacement_for_event_semantics_sci_manuscript.md
scripts/: check_formalization.py  check_paper_docx_sync.py  export_lexicon_patch_drafts.py  generate_formalization.py  paper_markdown.py  render_paper.sh  sync_paper_docx.py  verify_project.py
tests/: __init__.py  test_paper_docx.py  test_translator.py
translator/: __init__.py  dependent_type_event_translator.py  natural_language_pipeline.py  unified_syntax.py
translator/examples/: example_break_result.json  example_butter.json  example_eat_omission.json  example_knock_twice.json
web/: __init__.py  app.py
